This commit add style for nav and body

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/CSS/style.css">
     <title>Tea Cozy</title>
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <img src="resources/images/img-tea-cozy-logo.png" alt="Tea Cozy">
         <nav>
+            <a href="#" title="Tea Cozy"><img src="resources/images/img-tea-cozy-logo.png" alt="Tea Cozy"></a>
             <ul>
-                <li>Mission</li>
-                <li>Featured Tea</li>
-                <li>Location</li>
+                <li><a href="#" title="Our mission">Mission</a></li>
+                <li><a href="#" title="See our catalog of teas">Featured Tea</a></li>
+                <li><a href="#" title="Take a see where we are located">Location</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +24,7 @@
     <!-- banner-->
     <div class="banner">
         <img src="resources/images/img-mission-background.jpg" alt="our mission img-mission-background">
-        <div>
+        <div class="banner-heading">
             <h2>
                 Our Mission
             </h2>
@@ -33,34 +34,37 @@
         </div>
     </div>
 
-    <!-- tea of the month section -->
-    <section class="tea-of-month">
-        <h2>Tea of Month</h2>
-        <p>What's Steeping at The TEa Cozy?</p>
-        <div class="container">
-            <div class="item-fall-berry"><img src="resources/images/img-berryblitz.jpg">
-                <p>Fall Berry Blitz Tea</p>
+    <main>
+        <!--   -->
+        <section class="tea-of-month">
+            <h2>Tea of Month</h2>
+            <p>What's Steeping at The TEa Cozy?</p>
+            <div class="container">
+                <div class="item-fall-berry"><img src="resources/images/img-berryblitz.jpg">
+                    <p>Fall Berry Blitz Tea</p>
+                </div>
+                <div class="item-spiced-rum"><img src="resources/images/img-spiced-rum.jpg">
+                    <p>Spiced Rum Tea</p>
+                </div>
+                <div class="item-seasonal-donuts"><img src="resources/images/img-donut.jpg">
+                    <p>Seasonal Donuts</p>
+                </div>
+                <div class="item-myrtle-ave"><img src="resources/images/img-donut.jpg">
+                    <p>Myrtle Ave Tea</p>
+                </div>
+                <div class="item-bedford-bizarre"><img src="resources/images/img-bedford-bizarre.jpg">Beadford Bizarre
+                    Tea
+                </div>
             </div>
-            <div class="item-spiced-rum"><img src="resources/images/img-spiced-rum.jpg">
-                <p>Spiced Rum Tea</p>
-            </div>
-            <div class="item-seasonal-donuts"><img src="resources/images/img-donut.jpg">
-                <p>Seasonal Donuts</p>
-            </div>
-            <div class="item-myrtle-ave"><img src="resources/images/img-donut.jpg">
-                <p>Myrtle Ave Tea</p>
-            </div>
-            <div class="item-bedford-bizarre"><img src="resources/images/img-bedford-bizarre.jpg">Beadford Bizarre Tea
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Location section -->
-    <section class="locations">
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
+        <!-- Location section -->
+        <section class="locations">
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+    </main>
 
     <!--- footer-->
     <footer>
