This commit change the entire css

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
         <nav>
             <a href="#" title="Tea Cozy"><img src="resources/images/img-tea-cozy-logo.png" alt="Tea Cozy"></a>
             <ul>
-                <li><a href="#" title="Our mission">Mission</a></li>
-                <li><a href="#" title="See our catalog of teas">Featured Tea</a></li>
-                <li><a href="#" title="Take a see where we are located">Location</a></li>
+                <li><a href="#">Mission</a></li>
+                <li><a href="#">Featured Tea</a></li>
+                <li><a href="#">Location</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- banner-->
     <div class="banner">
-        <img src="resources/images/img-mission-background.jpg" alt="our mission img-mission-background">
         <div class="banner-heading">
             <h2>
                 Our Mission
@@ -35,28 +34,28 @@
     </div>
 
     <main>
-        <!--   -->
-        <section class="tea-of-month">
+        <!-- Tea of the month -->
+        <div class="tea-of-month">
             <h2>Tea of Month</h2>
             <p>What's Steeping at The TEa Cozy?</p>
             <div class="container">
-                <div class="item-fall-berry"><img src="resources/images/img-berryblitz.jpg">
+                <div class="item"><img src="resources/images/img-berryblitz.jpg">
                     <p>Fall Berry Blitz Tea</p>
                 </div>
-                <div class="item-spiced-rum"><img src="resources/images/img-spiced-rum.jpg">
+                <div class="item"><img src="resources/images/img-spiced-rum.jpg">
                     <p>Spiced Rum Tea</p>
                 </div>
-                <div class="item-seasonal-donuts"><img src="resources/images/img-donut.jpg">
+                <div class="item"><img src="resources/images/img-donut.jpg">
                     <p>Seasonal Donuts</p>
                 </div>
-                <div class="item-myrtle-ave"><img src="resources/images/img-donut.jpg">
+                <div class="item"><img src="resources/images/img-myrtle-ave.jpg">
                     <p>Myrtle Ave Tea</p>
                 </div>
-                <div class="item-bedford-bizarre"><img src="resources/images/img-bedford-bizarre.jpg">Beadford Bizarre
+                <div class="item"><img src="resources/images/img-bedford-bizarre.jpg">Beadford Bizarre
                     Tea
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- Location section -->
         <section class="locations">
