This commit add changes of  the layout structure

--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
         <!-- Tea of the month -->
         <div class="tea-of-month">
             <h2>Tea of Month</h2>
-            <p>What's Steeping at The TEa Cozy?</p>
+            <p>What's Steeping at The Tea Cozy?</p>
             <div class="container">
                 <div class="item"><img src="resources/images/img-berryblitz.jpg">
-                    <p>Fall Berry Blitz Tea</p>
+                    <h4>Fall Berry Blitz Tea</h4>
                 </div>
                 <div class="item"><img src="resources/images/img-spiced-rum.jpg">
-                    <p>Spiced Rum Tea</p>
+                    <h4>Spiced Rum Tea</h4>
                 </div>
-                <div class="item"><img src="resources/images/img-donut.jpg">
-                    <p>Seasonal Donuts</p>
+                <div class="item">
+                    <img src="resources/images/img-donut.jpg">
+                    <h4>Seasonal Donuts</h4>
                 </div>
                 <div class="item"><img src="resources/images/img-myrtle-ave.jpg">
-                    <p>Myrtle Ave Tea</p>
+                    <h4>Myrtle Ave Tea</h4>
                 </div>
-                <div class="item"><img src="resources/images/img-bedford-bizarre.jpg">Beadford Bizarre
-                    Tea
+                <div class="item"><img src="resources/images/img-bedford-bizarre.jpg">
+                    <h4>Beadford Bizarre     Tea</h4>
                 </div>
             </div>
         </div>
@@ -67,10 +68,12 @@
 
     <!--- footer-->
     <footer>
-        <h2>The Tea Cozy</h2>
-        <h5>contact@theteacozy.com</h5>
-        <p>917-555-8904</p>
-        <div>
+        <div class="tea-cozy-contact">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <p>917-555-8904</p>
+        </div>
+        <div class="copyright">
             <p>copyright The Tea Cozy 2017</p>
         </div>
     </footer>
