This commit add more css for the other sections

--- a/index.html
+++ b/index.html
@@ -53,16 +53,21 @@
                     <h4>Myrtle Ave Tea</h4>
                 </div>
                 <div class="item"><img src="resources/images/img-bedford-bizarre.jpg">
-                    <h4>Beadford Bizarre     Tea</h4>
+                    <h4>Beadford Bizarre Tea</h4>
                 </div>
             </div>
         </div>
 
         <!-- Location section -->
-        <section class="locations">
-            <div></div>
-            <div></div>
-            <div></div>
+        <section class="locations-section">
+            <div class="locations">
+                <h2>Locations</h2>
+                <div class="locations-container">
+                    <div class="loc-div"></div>
+                    <div class="loc-div"></div>
+                    <div class="loc-div"></div>
+                </div>
+            </div>
         </section>
     </main>
 
